// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimePicker snapshots should render 12-hour notation 1`] = `
<div
  className="widget-timepicker"
  onBlurCapture={[Function]}
  onFocusCapture={[Function]}
  onKeyDownCapture={[Function]}
  tabIndex={-1}
>
  <div
    className="rdt widget-timepicker-input"
  >
    <input
      className="form-control"
      disabled={false}
      id="unique-id"
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Placeholder"
      tabIndex={0}
      type="text"
      value="01:02:03 AM"
    />
    <div
      className="rdtPicker"
    >
      <div
        className="rdtTime"
      >
        <table>
          <tbody>
            <tr>
              <td>
                <div
                  className="rdtCounters"
                >
                  <div
                    className="rdtCounter"
                  >
                    <span
                      className="rdtBtn"
                      onContextMenu={[Function]}
                      onMouseDown={[Function]}
                    >
                      ▲
                    </span>
                    <div
                      className="rdtCount"
                    >
                      1
                    </div>
                    <span
                      className="rdtBtn"
                      onContextMenu={[Function]}
                      onMouseDown={[Function]}
                    >
                      ▼
                    </span>
                  </div>
                  <div
                    className="rdtCounterSeparator"
                  >
                    :
                  </div>
                  <div
                    className="rdtCounter"
                  >
                    <span
                      className="rdtBtn"
                      onContextMenu={[Function]}
                      onMouseDown={[Function]}
                    >
                      ▲
                    </span>
                    <div
                      className="rdtCount"
                    >
                      02
                    </div>
                    <span
                      className="rdtBtn"
                      onContextMenu={[Function]}
                      onMouseDown={[Function]}
                    >
                      ▼
                    </span>
                  </div>
                  <div
                    className="rdtCounterSeparator"
                  >
                    :
                  </div>
                  <div
                    className="rdtCounter"
                  >
                    <span
                      className="rdtBtn"
                      onContextMenu={[Function]}
                      onMouseDown={[Function]}
                    >
                      ▲
                    </span>
                    <div
                      className="rdtCount"
                    >
                      03
                    </div>
                    <span
                      className="rdtBtn"
                      onContextMenu={[Function]}
                      onMouseDown={[Function]}
                    >
                      ▼
                    </span>
                  </div>
                  <div
                    className="rdtCounter"
                  >
                    <span
                      className="rdtBtn"
                      onContextMenu={[Function]}
                      onMouseDown={[Function]}
                    >
                      ▲
                    </span>
                    <div
                      className="rdtCount"
                    >
                      AM
                    </div>
                    <span
                      className="rdtBtn"
                      onContextMenu={[Function]}
                      onMouseDown={[Function]}
                    >
                      ▼
                    </span>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <button
    aria-label="Show time picker"
    className="btn mx-button widget-timepicker-button"
    disabled={false}
    onClick={[Function]}
    tabIndex={-1}
    type="button"
  >
    <span
      className="glyphicon glyphicon-time"
    />
  </button>
</div>
`;

exports[`TimePicker snapshots should render a default human readable placeholder 1`] = `
<div
  className="widget-timepicker"
  onBlurCapture={[Function]}
  onFocusCapture={[Function]}
  onKeyDownCapture={[Function]}
  tabIndex={-1}
>
  <div
    className="rdt widget-timepicker-input"
  >
    <input
      className="form-control"
      disabled={false}
      id="unique-id"
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="HH:mm:ss"
      tabIndex={0}
      type="text"
      value="01:02:03"
    />
    <div
      className="rdtPicker"
    >
      <div
        className="rdtTime"
      >
        <table>
          <tbody>
            <tr>
              <td>
                <div
                  className="rdtCounters"
                >
                  <div
                    className="rdtCounter"
                  >
                    <span
                      className="rdtBtn"
                      onContextMenu={[Function]}
                      onMouseDown={[Function]}
                    >
                      ▲
                    </span>
                    <div
                      className="rdtCount"
                    >
                      1
                    </div>
                    <span
                      className="rdtBtn"
                      onContextMenu={[Function]}
                      onMouseDown={[Function]}
                    >
                      ▼
                    </span>
                  </div>
                  <div
                    className="rdtCounterSeparator"
                  >
                    :
                  </div>
                  <div
                    className="rdtCounter"
                  >
                    <span
                      className="rdtBtn"
                      onContextMenu={[Function]}
                      onMouseDown={[Function]}
                    >
                      ▲
                    </span>
                    <div
                      className="rdtCount"
                    >
                      02
                    </div>
                    <span
                      className="rdtBtn"
                      onContextMenu={[Function]}
                      onMouseDown={[Function]}
                    >
                      ▼
                    </span>
                  </div>
                  <div
                    className="rdtCounterSeparator"
                  >
                    :
                  </div>
                  <div
                    className="rdtCounter"
                  >
                    <span
                      className="rdtBtn"
                      onContextMenu={[Function]}
                      onMouseDown={[Function]}
                    >
                      ▲
                    </span>
                    <div
                      className="rdtCount"
                    >
                      03
                    </div>
                    <span
                      className="rdtBtn"
                      onContextMenu={[Function]}
                      onMouseDown={[Function]}
                    >
                      ▼
                    </span>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <button
    aria-label="Show time picker"
    className="btn mx-button widget-timepicker-button"
    disabled={false}
    onClick={[Function]}
    tabIndex={-1}
    type="button"
  >
    <span
      className="glyphicon glyphicon-time"
    />
  </button>
</div>
`;

exports[`TimePicker snapshots should render the structure 1`] = `
<div
  className="widget-timepicker"
  onBlurCapture={[Function]}
  onFocusCapture={[Function]}
  onKeyDownCapture={[Function]}
  tabIndex={-1}
>
  <div
    className="rdt widget-timepicker-input"
  >
    <input
      className="form-control"
      disabled={false}
      id="unique-id"
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Placeholder"
      tabIndex={0}
      type="text"
      value="01:02:03"
    />
    <div
      className="rdtPicker"
    >
      <div
        className="rdtTime"
      >
        <table>
          <tbody>
            <tr>
              <td>
                <div
                  className="rdtCounters"
                >
                  <div
                    className="rdtCounter"
                  >
                    <span
                      className="rdtBtn"
                      onContextMenu={[Function]}
                      onMouseDown={[Function]}
                    >
                      ▲
                    </span>
                    <div
                      className="rdtCount"
                    >
                      1
                    </div>
                    <span
                      className="rdtBtn"
                      onContextMenu={[Function]}
                      onMouseDown={[Function]}
                    >
                      ▼
                    </span>
                  </div>
                  <div
                    className="rdtCounterSeparator"
                  >
                    :
                  </div>
                  <div
                    className="rdtCounter"
                  >
                    <span
                      className="rdtBtn"
                      onContextMenu={[Function]}
                      onMouseDown={[Function]}
                    >
                      ▲
                    </span>
                    <div
                      className="rdtCount"
                    >
                      02
                    </div>
                    <span
                      className="rdtBtn"
                      onContextMenu={[Function]}
                      onMouseDown={[Function]}
                    >
                      ▼
                    </span>
                  </div>
                  <div
                    className="rdtCounterSeparator"
                  >
                    :
                  </div>
                  <div
                    className="rdtCounter"
                  >
                    <span
                      className="rdtBtn"
                      onContextMenu={[Function]}
                      onMouseDown={[Function]}
                    >
                      ▲
                    </span>
                    <div
                      className="rdtCount"
                    >
                      03
                    </div>
                    <span
                      className="rdtBtn"
                      onContextMenu={[Function]}
                      onMouseDown={[Function]}
                    >
                      ▼
                    </span>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <button
    aria-label="Show time picker"
    className="btn mx-button widget-timepicker-button"
    disabled={false}
    onClick={[Function]}
    tabIndex={-1}
    type="button"
  >
    <span
      className="glyphicon glyphicon-time"
    />
  </button>
</div>
`;

exports[`TimePicker snapshots should render validation messages 1`] = `
Array [
  <div
    className="widget-timepicker"
    onBlurCapture={[Function]}
    onFocusCapture={[Function]}
    onKeyDownCapture={[Function]}
    tabIndex={-1}
  >
    <div
      className="rdt widget-timepicker-input"
    >
      <input
        className="form-control"
        disabled={false}
        id="unique-id"
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Placeholder"
        tabIndex={0}
        type="text"
        value="01:02:03"
      />
      <div
        className="rdtPicker"
      >
        <div
          className="rdtTime"
        >
          <table>
            <tbody>
              <tr>
                <td>
                  <div
                    className="rdtCounters"
                  >
                    <div
                      className="rdtCounter"
                    >
                      <span
                        className="rdtBtn"
                        onContextMenu={[Function]}
                        onMouseDown={[Function]}
                      >
                        ▲
                      </span>
                      <div
                        className="rdtCount"
                      >
                        1
                      </div>
                      <span
                        className="rdtBtn"
                        onContextMenu={[Function]}
                        onMouseDown={[Function]}
                      >
                        ▼
                      </span>
                    </div>
                    <div
                      className="rdtCounterSeparator"
                    >
                      :
                    </div>
                    <div
                      className="rdtCounter"
                    >
                      <span
                        className="rdtBtn"
                        onContextMenu={[Function]}
                        onMouseDown={[Function]}
                      >
                        ▲
                      </span>
                      <div
                        className="rdtCount"
                      >
                        02
                      </div>
                      <span
                        className="rdtBtn"
                        onContextMenu={[Function]}
                        onMouseDown={[Function]}
                      >
                        ▼
                      </span>
                    </div>
                    <div
                      className="rdtCounterSeparator"
                    >
                      :
                    </div>
                    <div
                      className="rdtCounter"
                    >
                      <span
                        className="rdtBtn"
                        onContextMenu={[Function]}
                        onMouseDown={[Function]}
                      >
                        ▲
                      </span>
                      <div
                        className="rdtCount"
                      >
                        03
                      </div>
                      <span
                        className="rdtBtn"
                        onContextMenu={[Function]}
                        onMouseDown={[Function]}
                      >
                        ▼
                      </span>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
    <button
      aria-label="Show time picker"
      className="btn mx-button widget-timepicker-button"
      disabled={false}
      onClick={[Function]}
      tabIndex={-1}
      type="button"
    >
      <span
        className="glyphicon glyphicon-time"
      />
    </button>
  </div>,
  <div
    className="alert alert-danger mx-validation-message"
  >
    Error1
  </div>,
  <div
    className="alert alert-danger mx-validation-message"
  >
    Error2
  </div>,
]
`;

exports[`TimePicker snapshots should render without a data attribute 1`] = `
<div
  className="widget-timepicker"
  onBlurCapture={[Function]}
  onFocusCapture={[Function]}
  onKeyDownCapture={[Function]}
  tabIndex={-1}
>
  <div
    className="rdt widget-timepicker-input"
  >
    <input
      className="form-control"
      disabled={true}
      id="unique-id"
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="No attribute selected"
      tabIndex={0}
      type="text"
      value=""
    />
    <div
      className="rdtPicker"
    >
      <div
        className="rdtTime"
      >
        <table>
          <tbody>
            <tr>
              <td>
                <div
                  className="rdtCounters"
                >
                  <div
                    className="rdtCounter"
                  >
                    <span
                      className="rdtBtn"
                      onContextMenu={[Function]}
                      onMouseDown={[Function]}
                    >
                      ▲
                    </span>
                    <div
                      className="rdtCount"
                    >
                      0
                    </div>
                    <span
                      className="rdtBtn"
                      onContextMenu={[Function]}
                      onMouseDown={[Function]}
                    >
                      ▼
                    </span>
                  </div>
                  <div
                    className="rdtCounterSeparator"
                  >
                    :
                  </div>
                  <div
                    className="rdtCounter"
                  >
                    <span
                      className="rdtBtn"
                      onContextMenu={[Function]}
                      onMouseDown={[Function]}
                    >
                      ▲
                    </span>
                    <div
                      className="rdtCount"
                    >
                      00
                    </div>
                    <span
                      className="rdtBtn"
                      onContextMenu={[Function]}
                      onMouseDown={[Function]}
                    >
                      ▼
                    </span>
                  </div>
                  <div
                    className="rdtCounterSeparator"
                  >
                    :
                  </div>
                  <div
                    className="rdtCounter"
                  >
                    <span
                      className="rdtBtn"
                      onContextMenu={[Function]}
                      onMouseDown={[Function]}
                    >
                      ▲
                    </span>
                    <div
                      className="rdtCount"
                    >
                      00
                    </div>
                    <span
                      className="rdtBtn"
                      onContextMenu={[Function]}
                      onMouseDown={[Function]}
                    >
                      ▼
                    </span>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <button
    aria-label="Show time picker"
    className="btn mx-button widget-timepicker-button"
    disabled={true}
    onClick={[Function]}
    tabIndex={-1}
    type="button"
  >
    <span
      className="glyphicon glyphicon-time"
    />
  </button>
</div>
`;
